# Zero-Dependency-Edge-Inference-Engine

./: CMakeLists.txt
include/: activations.h  dense_layer.h  matrix.h  neural_network.h
src/: activations.cpp  dense_layer.cpp  main.cpp  matrix.cpp  mlp.cpp  neural_network.cpp
